# RLottieAndroid

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/dev/glk/rlottieandroidapp/: MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
rlottieandroid/: build.gradle
rlottieandroid/src/main/: AndroidManifest.xml
rlottieandroid/src/main/cpp/: CMakeLists.txt  download_libs.sh
rlottieandroid/src/main/cpp/rlottie/: CMakeLists.txt
rlottieandroid/src/main/cpp/rlottie/inc/: config.h
rlottieandroid/src/main/cpp/rlottie/src/: CMakeLists.txt
rlottieandroid/src/main/cpp/src/: jni.cpp  lottieanimation.cpp  lottieanimation.hpp  rlottieanimation.cpp  rlottieanimation.hpp  utils.cpp  utils.hpp
rlottieandroid/src/main/java/dev/glk/rlottieandroid/: RLottie.java  RLottieDrawable.java  RLottieNative.java  SyncRLottieDrawable.java
